--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": "https://Shravani2807.github.io/SDGPR",
+  "homepage": "https://Shravani2807.github.io/sdgpr-frontend",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
@@ -20,10 +20,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "push-dir --dir=build --branch=gh-pages --cleanup",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "push-dir": "^0.4.1"
   }
 }
